[tool.poetry]
name = "angryexception"
version = "1.0.0"
description = "An exception handler that tells you that you're stupid."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
